src/objects/cec_Case_QC_Mapping__c.object
<CustomObject>
    <description>CEC-cec_Case_QC_Mapping</description>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Used to fetch the mapping record and associate it&apos;s values to Case.</description>
        <label>Country</label>
        <referenceTo>mdm_Geography__c</referenceTo>
        <relationshipLabel>Case QC Mappings</relationshipLabel>
        <relationshipName>Case_QC_Mappings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>mdm_Case_Product__c</referenceTo>
        <relationshipLabel>Case QC Mappings</relationshipLabel>
        <relationshipName>Case_QC_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QC_Type__c</fullName>
        <label>QC Type</label>
        <picklist>
            <picklistValues>
                <fullName>Spam</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reason Code</label>
        <referenceTo>mdm_Reason_Code__c</referenceTo>
        <relationshipName>Case_QC_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Escalated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Information from Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awaiting Knowledge Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed as Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Verbatim__c</fullName>
        <label>Verbatim</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Case QC Mapping</label>
    <listViews>
        <fullName>CEC_ANZ_Queue_cec_Case_QC_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC ANZ Queue</label>
        <queue>CEC_ANZ_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Baltics_Queue_cec_Case_QC_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC Baltics Queue</label>
        <queue>CEC_Baltics_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Bangladesh_Queue_cec_Case_QC_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC Bangladesh Queue</label>
        <queue>CEC_Bangladesh_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Benelux_Queue_cec_Case_QC_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC Benelux Queue</label>
        <queue>CEC_Benelux_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Brazil_Queue_cec_Case_QC_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC Brazil Queue</label>
        <queue>CEC_Brazil_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Cyprus_Queue_cec_Case_QC_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC Cyprus Queue</label>
        <queue>CEC_Cyprus_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Czech_Republic_Queue_cec_Case_QC_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC Czech Republic Queue</label>
        <queue>CEC_Czech_Republic_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_DACH_Queue_cec_Case_QC_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC DACH Queue</label>
        <queue>CEC_DACH_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_France_Queue_cec_Case_QC_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC France Queue</label>
        <queue>CEC_France_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_General_Queue_cec_Case_QC_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC UKI Queue</label>
        <queue>CEC_General_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Greece_Queue_cec_Case_QC_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC Greece Queue</label>
        <queue>CEC_Greece_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Hungary_Queue_cec_Case_QC_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC Hungary Queue</label>
        <queue>CEC_Hungary_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_India_Tier_1_cec_Case_QC_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC India Tier 1</label>
        <queue>CEC_India_Tier_1</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Indonesia_Queue_cec_Case_QC_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC Indonesia Queue</label>
        <queue>CEC_Indonesia_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CEC_Italy_Queue_cec_Case_QC_Mapping</fullName>
        <filterScope>Queue</filterScope>
        <label>CEC Italy Queue</label>
        <queue>CEC_Italy_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Case QC Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case QC Mappings</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Product_and_Reason_Code_Validation</fullName>
        <active>true</active>
        <description>Checks whether the selected Product and Reason code country is equal to the Country selected in the Case QC Mapping record.</description>
        <errorConditionFormula>NOT(AND(NOT(Product__c &lt;&gt; NULL &amp;&amp; Product__r.ISO_Country_Code__c &lt;&gt; Country__r.ISO_3166_1_Code__c),NOT(Reason_Code__c &lt;&gt; NULL &amp;&amp; Reason_Code__r.ISO_Country__c &lt;&gt; Country__r.ISO_3166_1_Code__c)))</errorConditionFormula>
        <errorMessage>Product and Reason Code Country should match with the Case QC Mapping Country.</errorMessage>
    </validationRules>
</CustomObject>